--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 #header{
     height: 75vh;
     opacity: 0.9;
-    background-image: url(image/macbook.jpg);
+    background-image: url(macbook.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
